<resources>
    <string name="app_name">FamilyGuard</string>

    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="back">返回</string>
    <string name="next">下一步</string>
    <string name="net_error">网络连接错误</string>

    // Login
    <string name="frg_login">登录</string>
    <string name="frg_register">注册账号</string>
    <string name="frg_find_pwd">重获密码</string>
    <string name="username">用户名</string>
    <string name="phone">手机号码</string>
    <string name="password">密码</string>
    <string name="username_tip">请输入用户名</string>
    <string name="password_tip">请输入密码</string>
    <string name="register_password_tip">请输入6位字符</string>
    <string name="phone_tip">请输入11位手机号码</string>
    <string name="login">登录</string>
    <string name="get_pwd">重获密码</string>
    <string name="to_register_tip">第一次使用？注册</string>
    <string name="to_login_tip">已经注册？登录</string>
    <string name="find_pwd_tip">忘记密码</string>
    <string name="logout">退出</string>
    <string name="logout_tip">确定退出嘛？</string>

    // Home
    <string name="frg_environment">环境</string>
    <string name="frg_surveillance">监控</string>
    <string name="frg_facility">家电</string>
    <string name="frg_message">消息</string>
    <string name="frg_setting">设置</string>
    <string name="environment_tip">安兵兵家庭环境</string>
    <string name="add_device">添加家电</string>
    <string name="add_facility">添加家电</string>
    <string name="btn_control">开关控制</string>

    // Room
    <string name="room_living">客厅</string>
    <string name="room_bedroom">卧室</string>
    <string name="room_kitchen">厨房</string>
    <string name="room_toilet">洗手间</string>
    <string name="room_dining">餐厅</string>
    <string name="room_child">儿童房</string>
    <string name="room_baby">婴儿房</string>
    <string name="room_entertainment">活动室</string>
    <string name="room_media">媒体房</string>
    <string name="room_office">办公室</string>
    <string name="room_gaming">休闲室</string>
    <string name="room_study">书房</string>
    <string name="room_workspace">工作室</string>
    <string name="room_cloak">衣帽间</string>
    <string name="room_garden">花园</string>
    <string name="room_bathroom">浴室</string>
    <string name="room_laundry">洗衣房</string>
    <string name="room_storage">杂物间</string>
    <string name="room_loft">阁楼</string>
    <string name="room_stair">楼梯</string>
    <string name="room_add">新增</string>
    <string name="activity_room_title">添加房間</string>
    <string name="activity_room_hint">請選擇一個您要創建的房間</string>

    // Setting
    <string name="add_device_title">新增设备设置</string>
    <string name="ad_step1_tip">设备接通电源，确认已连接状态</string>
    <string name="ad_step1_tv"><u>指示灯处于其他状态？</u></string>
    <string name="ad_step1_cb">蓝灯闪烁中</string>
    <string name="ad_light_title">指示灯</string>
    <string name="ad_light_tip">1.White Light: Turn On\n2.Blue Light: Wait for Wi-fi connection\n3.Green Light: Wi-fi Connected\n4.Red Light: Wi-fi Connected Error\n5.Purple Light: Voice Assistant woke up</string>
    <string name="wifi_username_tip">请输入账号</string>
    <string name="wifi_tip">请在手机应用界面输入WIFI\n账号、密码生成二维码</string>
    <string name="qr_code_tip">请将下方二维码对准设备摄像头\n距离约20~40CM对设备配网</string>
    <string name="abb_offline">设备不在线</string>
    <string name="qr_code_error">配网失败，请重新配网</string>
    <string name="pls_choose_room">请选择房间</string>
    <string name="network_settings">网络设置</string>
    <string name="add_device_tip">添加设置</string>
    <string name="display_settings">显示设置</string>
    <string name="dust_quantity_display">粉尘数量显示</string>
    <string name="monitoring_item_display">监控项目显示</string>
    <string name="history_unit">保存线路图历史单元</string>
    <string name="environment_parameter_setting">环境参数设置</string>
    <string name="equipment">设置设备</string>
    <string name="device_management">设备管理</string>
    <string name="equipment_distribution">设备分布</string>
    <string name="change_password">修改密码</string>
    <string name="reset">重置</string>
    <string name="about">关于</string>
    <string name="original_password">请填写原密码</string>
    <string name="new_password">请填写新密码</string>
    <string name="confirm_password">确保和新密码一致</string>
    <string name="password_rule">密码必须至少6个字符</string>
    <string name="command_control">指令控制</string>
    <string name="save_tip">设备已连接网络，请给我取个名字吧！</string>
    <string name="select_home">请选择一个房间！</string>
    <string name="save">保存</string>
    <string name="select_all">全选</string>
    <string name="default_all">恢复默认设置</string>
    <string name="device_name">设备名称</string>
    <string name="device_room">所在房间</string>
    <string name="environment_item">监控项目显示</string>
    <string name="environment_need_one">请至少选择一个检测项目</string>
    <string name="save_success">保存成功</string>
    <string name="add_abb_success">添加设备成功</string>

    // Environment name
    <string name="environment_dust_name">粉尘</string>
    <string name="environment_temperature_name">温度</string>
    <string name="environment_humidity_name">湿度</string>
    <string name="environment_co_name">CO</string>
    <string name="environment_smoke_name">烟雾</string>
    <string name="environment_tvoc_name">TVOC</string>
    <string name="environment_co2_name">CO2</string>
    <string name="environment_noise_name">噪音</string>
    <string name="environment_light_name">亮光</string>
    <string name="environment_motion_name">移动监测</string>
    <string name="environment_methanal_name">甲醛</string>
    // Environment unit
    <string name="environment_dust_unit">ug/m3</string>
    <string name="environment_dust_num_unit">个</string>
    <string name="environment_temperature_unit">℃</string>
    <string name="environment_humidity_unit">%</string>
    <string name="environment_co_unit">PPM</string>
    <string name="environment_tvoc_unit">PPB</string>
    <string name="environment_co2_unit">PPM</string>
    <string name="environment_noise_unit">dB</string>
    <string name="environment_light_unit">Lux</string>
    <string name="environment_null_unit"></string>
</resources>
