<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/environmentFrg"
        android:icon="@drawable/btn_environment"
        android:title="@string/frg_environment" />
    <item
        android:id="@+id/surveillanceFrg"
        android:icon="@drawable/btn_surveillance"
        android:title="@string/frg_surveillance" />
    <item
        android:id="@+id/facilityFrg"
        android:icon="@drawable/btn_facility"
        android:title="@string/frg_facility" />
    <item
        android:id="@+id/messageFrg"
        android:icon="@drawable/btn_message"
        android:title="@string/frg_message" />
    <item
        android:id="@+id/settingFrg"
        android:icon="@drawable/btn_setting"
        android:title="@string/frg_setting" />
</menu>