<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="clickListener"
            type="android.view.View.OnClickListener" />

        <variable
            name="vm"
            type="com.njdc.abb.familyguard.viewmodel.FindPwdViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.njdc.abb.familyguard.ui.widget.CustomToolbar
            android:id="@+id/tb_findpwd"
            android:layout_width="match_parent"
            android:layout_height="@dimen/qb_px_43"
            app:layout_constraintTop_toTopOf="parent"
            app:leftTitle="@string/cancel"
            app:title="@string/frg_find_pwd" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_user"
            android:layout_width="match_parent"
            android:layout_height="@dimen/qb_px_312"
            android:scaleType="fitXY"
            android:src="@mipmap/ic_login_bg"
            app:layout_constraintTop_toBottomOf="@+id/tb_findpwd" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/qb_px_36"
            android:layout_marginTop="@dimen/qb_px_10"
            android:text="@string/username"
            android:textColor="@color/login_input_text_color"
            android:textSize="@dimen/qb_px_16"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_user" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_username"
            android:layout_width="match_parent"
            android:layout_height="@dimen/qb_px_50"
            android:layout_marginStart="@dimen/qb_px_30"
            android:layout_marginEnd="@dimen/qb_px_80"
            android:hint="@string/username_tip"
            android:inputType="text"
            android:paddingLeft="@dimen/qb_px_28"
            android:text="@={vm.username}"
            android:textColor="@color/login_input_text_color"
            android:textSize="@dimen/qb_px_14"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_username" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone"
            android:textColor="@color/login_input_text_color"
            android:textSize="@dimen/qb_px_16"
            app:layout_constraintLeft_toLeftOf="@id/tv_username"
            app:layout_constraintTop_toBottomOf="@id/et_username" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_phone"
            android:layout_width="0dp"
            android:layout_height="@dimen/qb_px_50"
            android:hint="@string/phone_tip"
            android:inputType="phone"
            android:paddingLeft="@dimen/qb_px_28"
            android:text="@={vm.phone}"
            android:textColor="@color/login_input_text_color"
            android:textSize="@dimen/qb_px_14"
            app:layout_constraintLeft_toLeftOf="@+id/et_username"
            app:layout_constraintRight_toRightOf="@+id/et_username"
            app:layout_constraintTop_toBottomOf="@+id/tv_phone" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_register"
            android:layout_width="@dimen/qb_px_300"
            android:layout_height="@dimen/qb_px_64"
            android:layout_marginBottom="@dimen/qb_px_64"
            android:background="@drawable/btn_bg"
            android:onClick="@{clickListener}"
            android:text="@string/confirm"
            android:textColor="@color/white"
            android:textSize="@dimen/qb_px_24"
            app:layout_constraintLeft_toLeftOf="@id/tv_username"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>