<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="clickListener"
            type="android.view.View.OnClickListener" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.njdc.abb.familyguard.ui.widget.CustomToolbar
            android:id="@+id/tb_environment_item"
            android:layout_width="match_parent"
            android:layout_height="@dimen/qb_px_43"
            app:bottomLine="true"
            app:layout_constraintTop_toTopOf="parent"
            app:leftTitle="@string/back"
            app:leftTitleIcon="true"
            app:rightTitle="@string/save"
            app:title="@string/environment_item" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_environment"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toTopOf="@+id/line_holder"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tb_environment_item" />

        <View
            android:id="@+id/line_holder"
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginBottom="@dimen/qb_px_48"
            android:background="@color/login_title_text_color"
            app:layout_constraintBottom_toBottomOf="parent" />

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/cb_select_all"
            style="@style/BlueCheckBoxTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/qb_px_28"
            android:text="@string/select_all"
            android:textColor="@color/blue"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="@+id/line_holder" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_default"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/qb_px_28"
            android:onClick="@{clickListener}"
            android:text="@string/default_all"
            android:textColor="@color/blue"
            android:textSize="@dimen/qb_px_16"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/line_holder" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>