<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="btnEnable"
            type="boolean" />
        <variable
            name="clickListener"
            type="android.view.View.OnClickListener" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.njdc.abb.familyguard.ui.widget.CustomToolbar
            android:id="@+id/tb_step1"
            android:layout_width="match_parent"
            android:layout_height="@dimen/qb_px_43"
            app:layout_constraintTop_toTopOf="parent"
            app:leftTitle="@string/back"
            app:leftTitleIcon="true"
            app:title="@string/add_device_title" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_holder"
            android:layout_width="@dimen/qb_px_102"
            android:layout_height="@dimen/qb_px_134"
            android:layout_marginTop="@dimen/qb_px_34"
            android:src="@mipmap/ic_abb_device"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tb_step1" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_holder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/qb_px_66"
            android:text="@string/ad_step1_tip"
            android:textColor="@color/black"
            android:textSize="@dimen/qb_px_17"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_holder" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_light_guide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/qb_px_15"
            android:onClick="@{clickListener}"
            android:text="@string/ad_step1_tv"
            android:textColor="@color/blue"
            android:textSize="@dimen/qb_px_14"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_holder" />

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/cb_step1"
            style="@style/BlueCheckBoxTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="@={btnEnable}"
            android:text="@string/ad_step1_cb"
            android:layout_marginBottom="@dimen/qb_px_3"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/btn_step2" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_step2"
            android:layout_width="@dimen/qb_px_200"
            android:layout_height="@dimen/qb_px_80"
            android:layout_marginBottom="@dimen/qb_px_50"
            android:background="@drawable/btn_small_bg"
            android:enabled="@{btnEnable}"
            android:text="@string/next"
            android:textColor="@color/white"
            android:onClick="@{clickListener}"
            android:textSize="@dimen/qb_px_30"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>