<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="clickListener"
            type="android.view.View.OnClickListener" />

        <variable
            name="vm"
            type="com.njdc.abb.familyguard.viewmodel.LoginViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/iv_holder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:src="@mipmap/bg_loading"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="@string/username"
            android:textColor="@color/login_input_text_color"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_holder" />

        <EditText
            android:id="@+id/et_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/username_tip"
            android:inputType="text"
            android:text="@={vm.username}"
            android:textColor="@color/login_input_text_color"
            android:textSize="13sp"
            app:layout_constraintLeft_toLeftOf="@id/tv_username"
            app:layout_constraintTop_toBottomOf="@+id/tv_username" />

        <TextView
            android:id="@+id/tv_pwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textColor="@color/login_input_text_color"
            app:layout_constraintLeft_toLeftOf="@id/tv_username"
            app:layout_constraintTop_toBottomOf="@id/et_username" />

        <EditText
            android:id="@+id/et_pwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/password_tip"
            android:inputType="textPassword"
            android:text="@={vm.password}"
            android:textColor="@color/login_input_text_color"
            app:layout_constraintLeft_toLeftOf="@id/tv_username"
            app:layout_constraintTop_toBottomOf="@+id/tv_pwd" />

        <TextView
            android:id="@+id/tv_forget"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="@{clickListener}"
            android:text="@string/find_pwd_tip"
            android:textColor="@color/login_input_text_color"
            app:layout_constraintBaseline_toBaselineOf="@+id/et_pwd"
            app:layout_constraintLeft_toRightOf="@+id/et_pwd" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="@{vm.btnEnable}"
            android:onClick="@{clickListener}"
            android:text="@string/login"
            app:layout_constraintLeft_toLeftOf="@id/tv_username"
            app:layout_constraintTop_toBottomOf="@id/et_pwd" />

        <TextView
            android:id="@+id/tv_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="@{clickListener}"
            android:text="@string/register_tip"
            android:textColor="@color/login_input_text_color"
            app:layout_constraintLeft_toLeftOf="@id/tv_username"
            app:layout_constraintTop_toBottomOf="@id/btn_login" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>